FEAT: Update queries & First plot

--- a/SparkQueries.ipynb
+++ b/SparkQueries.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -228,16 +228,16 @@
       "+-----+----------+\n",
       "|SG_UE|SG_PARTIDO|\n",
       "+-----+----------+\n",
-      "|   SC|       PSD|\n",
-      "|   MG|      NOVO|\n",
-      "|   MS|      PSDB|\n",
-      "|   SC|       PSD|\n",
-      "|   MG|       PMN|\n",
-      "|   MG|  PATRIOTA|\n",
-      "|   SP|        PP|\n",
-      "|   PE|       PSB|\n",
-      "|   AM|      PSDB|\n",
-      "|   RS|      PROS|\n",
+      "|   SC|      PSOL|\n",
+      "|   SP|       PSD|\n",
+      "|   CE|      REDE|\n",
+      "|   MG|       PDT|\n",
+      "|   PB|     UNIÃO|\n",
+      "|   MA|      AGIR|\n",
+      "|   MG|        PT|\n",
+      "|   SP|    AVANTE|\n",
+      "|   MG|        PT|\n",
+      "|   MG|       PSD|\n",
       "+-----+----------+\n",
       "only showing top 10 rows\n",
       "\n"
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,22 +288,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------------+-----+-----------------+--------------------+----------+---------------------+--------------------+----------------+\n",
-      "|SQ_CANDIDATO|SG_UE|            NM_UE|        NM_CANDIDATO|SG_PARTIDO|DS_TIPO_BEM_CANDIDATO|    DS_BEM_CANDIDATO|VR_BEM_CANDIDATO|\n",
-      "+------------+-----+-----------------+--------------------+----------+---------------------+--------------------+----------------+\n",
-      "|190001619508|   RJ|   RIO DE JANEIRO|FABIANO OLIVEIRA ...|     UNIÃO| Quotas ou quinhõe...|99% das cotas da ...|         19800.0|\n",
-      "|190001638606|   RJ|   RIO DE JANEIRO|WELDERSON SIDNEY ...|  PATRIOTA|                 Casa|no município de V...|         93000.0|\n",
-      "|210001613993|   RS|RIO GRANDE DO SUL|LUCIANO PALMA DE ...|       PSD|                 Loja|Rua Coronel Chicu...|        470172.6|\n",
-      "|190001619480|   RJ|   RIO DE JANEIRO|CLEBIO LOPES PEREIRA|     UNIÃO| OUTROS BENS E DIR...|            SIDERCOL|       1676989.6|\n",
-      "|160001622616|   PR|           PARANÁ|NELTON MIGUEL FRI...|       PDT| Aplicação de rend...|       Investimentos|         30000.0|\n",
-      "+------------+-----+-----------------+--------------------+----------+---------------------+--------------------+----------------+\n",
+      "+------------+-----+--------------+--------------------+------------+---------------------+--------------------+----------------+\n",
+      "|SQ_CANDIDATO|SG_UE|         NM_UE|        NM_CANDIDATO|  SG_PARTIDO|DS_TIPO_BEM_CANDIDATO|    DS_BEM_CANDIDATO|VR_BEM_CANDIDATO|\n",
+      "+------------+-----+--------------+--------------------+------------+---------------------+--------------------+----------------+\n",
+      "|190001619493|   RJ|RIO DE JANEIRO|OTAVIO SANTOS SIL...|       UNIÃO| Depósito bancário...|Conta corrente - ...|          793.96|\n",
+      "|230001602809|   RR|       RORAIMA|    DUDA BRITO RAMOS|         MDB|                 Casa|Rua Edson Vieira ...|        120000.0|\n",
+      "| 10001619994|   AC|          ACRE|GERALDO ISRAEL MI...|REPUBLICANOS| Quotas ou quinhõe...|26% DAS QUOTAS DO...|         98039.0|\n",
+      "|250001612101|   SP|     SÃO PAULO|        MÁRCIA ROCHA|   CIDADANIA| Jóia, quadro, obj...| ESCULTURA ARTISTICA|          4000.0|\n",
+      "|250001643749|   SP|     SÃO PAULO|LEANDRO CSEIMAN D...|         PDT|              Terreno|   1/8 BAIRRO ARUJA |       128661.15|\n",
+      "+------------+-----+--------------+--------------------+------------+---------------------+--------------------+----------------+\n",
       "only showing top 5 rows\n",
       "\n"
      ]
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "[Row(TOTAL_BEM_CANDIDATO_BILHOES='7.21', TOTAL_CANDIDATOS=6366)]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,8 +466,10 @@
     "    .groupBy(\n",
     "        \"SG_UE\"\n",
     "    )\n",
+    "    # Aggregate sum and avg\n",
     "    .agg(\n",
-    "        F.sum( F.col(\"VR_BEM_CANDIDATO\") ).alias(\"TOTAL BENS\")\n",
+    "        F.sum( F.col(\"VR_BEM_CANDIDATO\") ).alias(\"TOTAL BENS\"),\n",
+    "        F.avg( F.col(\"VR_BEM_CANDIDATO\") ).alias(\"MEDIA BENS\")\n",
     "    )\n",
     "    .orderBy(\n",
     "        F.desc(\"TOTAL BENS\")\n",
@@ -477,44 +479,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-----+--------------------+\n",
-      "|SG_UE|TOTAL BENS          |\n",
-      "+-----+--------------------+\n",
-      "|SP   |1.2143276856198936E9|\n",
-      "|MG   |9.504191711380489E8 |\n",
-      "|RJ   |5.998792442260875E8 |\n",
-      "|PR   |4.687364865754497E8 |\n",
-      "|DF   |4.3387237743134475E8|\n",
-      "|GO   |3.1266681836336124E8|\n",
-      "|CE   |2.976540537267532E8 |\n",
-      "|BA   |2.840689506582558E8 |\n",
-      "|RS   |2.6503172541893113E8|\n",
-      "|SC   |2.4177128341094604E8|\n",
-      "|MA   |2.0494777125577286E8|\n",
-      "|PE   |2.028025139128284E8 |\n",
-      "|PA   |2.0055216283283943E8|\n",
-      "|MT   |1.9994814255513492E8|\n",
-      "|RR   |1.7936015321644616E8|\n",
-      "|PI   |1.626300498293633E8 |\n",
-      "|RN   |1.5322524850030357E8|\n",
-      "|AC   |1.2491514657306153E8|\n",
-      "|ES   |1.2232408985722113E8|\n",
-      "|TO   |1.078568051314967E8 |\n",
-      "|MS   |1.0426919895911348E8|\n",
-      "|RO   |7.584124175289346E7 |\n",
-      "|PB   |6.894666267027906E7 |\n",
-      "|AL   |6.780417662602329E7 |\n",
-      "|AM   |5.897766750664139E7 |\n",
-      "|SE   |5.343360440528E7    |\n",
-      "|AP   |4.920965397933769E7 |\n",
-      "+-----+--------------------+\n",
+      "+-----+--------------------+------------------+\n",
+      "|SG_UE|TOTAL BENS          |MEDIA BENS        |\n",
+      "+-----+--------------------+------------------+\n",
+      "|SP   |1.2143276856198936E9|205469.99756681785|\n",
+      "|MG   |9.504191711380489E8 |256523.39301971628|\n",
+      "|RJ   |5.998792442260875E8 |195209.64667298648|\n",
+      "|PR   |4.687364865754497E8 |190002.62933743402|\n",
+      "|DF   |4.3387237743134475E8|611949.756602743  |\n",
+      "|GO   |3.1266681836336124E8|234032.04967317457|\n",
+      "|CE   |2.976540537267532E8 |272327.5880391154 |\n",
+      "|BA   |2.840689506582558E8 |157378.92003227468|\n",
+      "|RS   |2.6503172541893113E8|130493.21783305323|\n",
+      "|SC   |2.4177128341094604E8|180696.02646558   |\n",
+      "|MA   |2.0494777125577286E8|170363.89963073388|\n",
+      "|PE   |2.028025139128284E8 |159561.3799471506 |\n",
+      "|PA   |2.0055216283283943E8|214494.29179982826|\n",
+      "|MT   |1.9994814255513492E8|292321.84584084054|\n",
+      "|RR   |1.7936015321644616E8|452929.6798395105 |\n",
+      "|PI   |1.626300498293633E8 |309182.60423833324|\n",
+      "|RN   |1.5322524850030357E8|212223.33587299663|\n",
+      "|AC   |1.2491514657306153E8|444537.8881603613 |\n",
+      "|ES   |1.2232408985722113E8|168722.88256168432|\n",
+      "|TO   |1.078568051314967E8 |189555.01780579385|\n",
+      "|MS   |1.0426919895911348E8|157506.34283854   |\n",
+      "|RO   |7.584124175289346E7 |136897.5482904214 |\n",
+      "|PB   |6.894666267027906E7 |129598.98998172754|\n",
+      "|AL   |6.780417662602329E7 |152368.9362382546 |\n",
+      "|AM   |5.897766750664139E7 |163373.04018460217|\n",
+      "|SE   |5.343360440528E7    |140985.7636023219 |\n",
+      "|AP   |4.920965397933769E7 |219685.9552649004 |\n",
+      "+-----+--------------------+------------------+\n",
       "\n"
      ]
     }
@@ -532,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
